[gd_scene load_steps=4 format=3 uid="uid://bduipm5o65jjh"]

[ext_resource type="Script" uid="uid://bbnnblmnykd07" path="res://Scenes/Menu/menu_monitor_hud.gd" id="1_4lqij"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yehqg"]
bg_color = Color(0, 0, 0, 0.160784)
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 100
corner_radius_bottom_right = 100
corner_detail = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lqij"]
bg_color = Color(0.0196078, 0.0196078, 0.0196078, 0.309804)
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Menu_Monitor_HUD" type="CanvasLayer"]
script = ExtResource("1_4lqij")

[node name="Control_Right_Butts" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control_Right_Butts"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -566.0
offset_top = -108.0
offset_right = 195.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_yehqg")

[node name="CenterContainer" type="CenterContainer" parent="Control_Right_Butts/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control_Right_Butts/Panel/CenterContainer"]
layout_mode = 2
text = "Test text
Тут будет информация о игроке, достижениях, где прогресс"

[node name="Control_Left_Butts" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control_Left_Butts"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -378.0
offset_top = -174.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_4lqij")

[node name="CenterContainer" type="CenterContainer" parent="Control_Left_Butts/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control_Left_Butts/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 120
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control_Left_Butts/Panel/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
text = "Уровень сложности:"
fit_content = true

[node name="difficulty_level" type="OptionButton" parent="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Пока - так"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Easy"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "Hard"
popup/item_3/id = 3
popup/item_3/disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control_Left_Butts/Panel/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="NewGame_Butt" type="Button" parent="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Новая Игра"

[node name="Cont_Butt" type="Button" parent="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Продолжить"

[connection signal="item_selected" from="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer2/difficulty_level" to="." method="_on_difficulty_level_item_selected"]
[connection signal="pressed" from="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer/NewGame_Butt" to="." method="_on_new_game_butt_pressed"]
[connection signal="pressed" from="Control_Left_Butts/Panel/CenterContainer/HBoxContainer/VBoxContainer/Cont_Butt" to="." method="_on_cont_butt_pressed"]
